[package]
name = "steamrunner"
version = "0.1.0"
edition = "2018"
build = "build.rs"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sixtyfps = "0.1.4"
lazy_static = "1.4"
notify-rust = "4.5.5"
closure = "0.3.0"

[build-dependencies]
sixtyfps-build = "0.1.4"
